[package]
name = "grpc-health-check"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "grpc-health-check"
path = "src/main.rs"
doctest = false

[profile.release]
lto = true
panic = "abort"

[dependencies]
mimalloc = { version = "0.1.28", optional = true }
prost = "0.11.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
structopt = "0.3"
tokio = { version = "1.25.0", features = ["net", "rt"], default-features = false }
tonic = { version = "0.8.3", features = ["tls"] }

[dev-dependencies]
assert_cmd = "2.0.8"
futures-util = "0.3"
predicates = "2"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8.3", default-features = false }
tonic-health = "0.8.0"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost", "transport"] }